trick to reload favicon

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=IBM+Plex+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="./site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#101218" />
     <meta name="theme-color" content="#101218" />
 
     <meta property="og:title" content="AI Excellence Labs — Enterprise AI Capability, Responsibly and at Scale" />
     <meta property="og:description" content="Structured 3-day AI enablement for enterprises — applied AI skills, change adoption, and EU AI Act alignment. €1,800 per participant." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./android-chrome-512x512.png" />
+    <meta property="og:image" content="/android-chrome-512x512.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AIExcellenceLab" />
-    <meta name="twitter:image" content="./android-chrome-512x512.png" />
+    <meta name="twitter:image" content="/android-chrome-512x512.png" />
   </head>
 
   <body>
